k8s/veille-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: veille-dashboard
spec:
  type: ClusterIP
  selector:
    app: veille-dashboard
  ports:
    - port: 80
      targetPort: 8080
      name: http
